@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,6 @@
  * @bug 8003147
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
  * @compile -g Bug8003147TestClass.java
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow parsers.Bug8003147Test
  * @run testng/othervm parsers.Bug8003147Test
  * @summary Test port fix for BCEL bug 39695.
  */
@@ -34,16 +33,11 @@
 package parsers;
 
 import static jaxp.library.JAXPTestUtilities.getSystemProperty;
-
 import java.io.FileOutputStream;
 import java.io.FilePermission;
-
 import jaxp.library.JAXPTestUtilities;
-
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
-
 import com.sun.org.apache.bcel.internal.classfile.ClassParser;
 import com.sun.org.apache.bcel.internal.classfile.ConstantClass;
 import com.sun.org.apache.bcel.internal.classfile.ConstantPool;
@@ -55,7 +49,6 @@ import com.sun.org.apache.bcel.internal.generic.MethodGen;
 import com.sun.org.apache.bcel.internal.generic.InstructionFactory;
 import com.sun.org.apache.bcel.internal.generic.InstructionList;
 
-@Listeners({ jaxp.library.FilePolicy.class, jaxp.library.InternalAPIPolicy.class })
 public class Bug8003147Test {
 
     @Test
@@ -63,44 +56,42 @@ public class Bug8003147Test {
         // Note: Because BCEL library is always behind java version, to make sure
         // JavaClass can parse the class file, create a separate
         // Bug8003147TestClass.java, which only uses basic features.
-        JAXPTestUtilities.tryRunWithTmpPermission(() -> {
-            String classfile = getSystemProperty("test.classes") + "/parsers/Bug8003147TestClass.class";
-            JavaClass jc = new ClassParser(classfile).parse();
+        String classfile = getSystemProperty("test.classes") + "/parsers/Bug8003147TestClass.class";
+        JavaClass jc = new ClassParser(classfile).parse();
 
-            // rename class
-            ConstantPool cp = jc.getConstantPool();
-            int cpIndex = ((ConstantClass) cp.getConstant(jc.getClassNameIndex())).getNameIndex();
-            cp.setConstant(cpIndex, new ConstantUtf8("parsers/Bug8003147TestClassPrime"));
-            ClassGen gen = new ClassGen(jc);
-            Method[] methods = jc.getMethods();
-            int index;
-            for (index = 0; index < methods.length; index++) {
-                if (methods[index].getName().equals("doSomething")) {
-                    break;
-                }
+        // rename class
+        ConstantPool cp = jc.getConstantPool();
+        int cpIndex = ((ConstantClass) cp.getConstant(jc.getClassNameIndex())).getNameIndex();
+        cp.setConstant(cpIndex, new ConstantUtf8("parsers/Bug8003147TestClassPrime"));
+        ClassGen gen = new ClassGen(jc);
+        Method[] methods = jc.getMethods();
+        int index;
+        for (index = 0; index < methods.length; index++) {
+            if (methods[index].getName().equals("doSomething")) {
+                break;
             }
-            Method m = methods[index];
-            MethodGen mg = new MethodGen(m, gen.getClassName(), gen.getConstantPool());
+        }
+        Method m = methods[index];
+        MethodGen mg = new MethodGen(m, gen.getClassName(), gen.getConstantPool());
 
-            // @bug 8064516, not currently used directly by JAXP, but we may need
-            // to modify preexisting methods in the future.
-            InstructionFactory f = new InstructionFactory(gen);
-            InstructionList il = mg.getInstructionList();
-            InstructionList newInst = new InstructionList();
-            newInst.append(f.createPrintln("Hello Sekai!"));
-            il.insert(newInst);
-            mg.setMaxStack();
+        // @bug 8064516, not currently used directly by JAXP, but we may need
+        // to modify preexisting methods in the future.
+        InstructionFactory f = new InstructionFactory(gen);
+        InstructionList il = mg.getInstructionList();
+        InstructionList newInst = new InstructionList();
+        newInst.append(f.createPrintln("Hello Sekai!"));
+        il.insert(newInst);
+        mg.setMaxStack();
 
-            gen.replaceMethod(m, mg.getMethod());
-            String path = classfile.replace("Bug8003147TestClass", "Bug8003147TestClassPrime");
-            gen.getJavaClass().dump(new FileOutputStream(path));
+        gen.replaceMethod(m, mg.getMethod());
+        String path = classfile.replace("Bug8003147TestClass", "Bug8003147TestClassPrime");
+        gen.getJavaClass().dump(new FileOutputStream(path));
 
-            try {
-                Class.forName("parsers.Bug8003147TestClassPrime");
-            } catch (ClassFormatError cfe) {
-                cfe.printStackTrace();
-                Assert.fail("modified version of class does not pass verification");
-            }
-        }, new FilePermission(getSystemProperty("test.classes") + "/-", "read,write"));
+        try {
+            Class.forName("parsers.Bug8003147TestClassPrime");
+        } catch (ClassFormatError cfe) {
+            cfe.printStackTrace();
+            Assert.fail("modified version of class does not pass verification");
+        }
     }
 }
