@@ -36,12 +36,6 @@
  * @run main/othervm/timeout=300 StartStopTest 1
  * @run main/othervm/timeout=300 StartStopTest 2
  * @run main/othervm/timeout=300 StartStopTest 3
- * @run main/othervm/timeout=300 -Djava.security.manager=allow StartStopTest 1
- * @run main/othervm/timeout=300 -Djava.security.manager=allow StartStopTest 2
- * @run main/othervm/timeout=300 -Djava.security.manager=allow StartStopTest 3
- * @run main/othervm/timeout=300/policy=all.policy StartStopTest 1
- * @run main/othervm/timeout=300/policy=all.policy StartStopTest 2
- * @run main/othervm/timeout=300/policy=all.policy StartStopTest 3
  *
  * @run main/othervm/timeout=300 -Djmx.x.monitor.maximum.pool.size=5 StartStopTest 1
  * @run main/othervm/timeout=300 -Djmx.x.monitor.maximum.pool.size=5 StartStopTest 2
