@@ -62,7 +62,6 @@ import java.util.Set;
  * @library /test/lib
  *
  * @run main/othervm/timeout=300 RmiBootstrapTest .*_test.*.in
- * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_test.*.in
  * */
 
 /*
@@ -74,7 +73,6 @@ import java.util.Set;
  * @library /test/lib
  *
  * @run main/othervm/timeout=300 RmiBootstrapTest .*_ssltest.*.in
- * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_ssltest.*.in
  * */
 
 /**
